--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -662,7 +662,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -677,7 +677,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -707,7 +707,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -722,7 +722,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -739,7 +739,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -754,7 +754,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -769,7 +769,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -784,7 +784,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -799,7 +799,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -814,7 +814,7 @@
               <a href="#"><h6 class="text-white pl-2 pt-1">Kitty_ kat</h6></a>
             </div>
             <div class="col-6 px-0">
-              <a href="#"><span class="contact-icons yellow-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+              <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
                 <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-sms"></i></span></a>
                 <a href="#"><span class="contact-icons"><i class="fa-solid fa-video"></i></span></a>
             </div>
@@ -834,11 +834,263 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row pt-4">
       <div class="col-xl-2">
-        
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="row pt-4">
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="captains-profile">
+          <div class="captains-images">
+            <a href="#"><img src="./Images/Captain image.png" alt="Camclients captains image"></a>
+          </div>
+          <div class="captains-details">
+            <div class="row pt-2">
+              <div class="col-6">
+                <a href="#"><h3 class="creators-name mb-1 pt-1">Paris Hilton</h3></a>
+                <a href="#"><h6>January 24</h6></a>
+              </div>
+              <div class="col-6 p-0 text-center">
+                <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots"></i></span></a>
+                <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="camclients-feed bgColor pb-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="camclients-feed-title">
+          <h2 class="sec-headings text-center" style="color: #EF377A;"> Feed</h2>
+        </div>
+      </div>
+    </div>
+    
   </div>
 </section>
   <script src="./js/bootstrap.bundle.min.js"></script>
