--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,226 @@
         </div>
       </div>
     </div>
-    
+    <div class="row pt-4">
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 1.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 1.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 2.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 2.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card pb-4">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 3.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 3.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 4.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 4.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 5.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 5.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 pt-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 6.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 6.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 7.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 7.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 pt-4 mt-1">
+        <div class="feed-content">
+          <div class="card">
+            <div class="card-image">
+              <h4>Paris Hilton</h4>
+              <img src="./Images/feed image 8.png" alt="CamClients Feed Image">
+            </div>
+            <div class="card-content">
+              <div class="row pt-3">
+                <div class="col-xl-2 p-0">
+                  <div class="card-profile">
+                    <img src="./Images/feed image 8.png" alt="CamClients Feed Image">
+                  </div>
+                </div>
+                <div class="col-xl-5 p-0">
+                  <p>Lorem Ipsum is simply dummy text of the printing </p>
+                </div>
+                <div class="col-xl-5 text-center p-0">
+                  <a href="#"><span class="contact-icons white-icon"><i class="fa-solid fa-comment-dots fa-flip-horizontal"></i></span></a>
+                  <a href="#"><span class="contact-icons green-icon"><i class="fa-solid fa-phone-flip"></i></span></a>
+                  <a href="#"><span class="contact-icons video-icon"><i class="fa-solid fa-video"></i></span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
   <script src="./js/bootstrap.bundle.min.js"></script>
