--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="row pt-2">
         <div class="col-xl-2 mt-2">
           <div class="creator-profile text-center">
-            <a href="#"><img src="./Images/Camclients creators.webp" class="live-circle profile-image" alt="Camclients creator"></a>
+            <a href="#"><img src="./Images/CamClients Creators.webp" class="live-circle profile-image" alt="Camclients creator"></a>
             <a href="#"><img src="./Icons/text massege icon.svg" class="creators-icons mt-3" alt="Send Massege"></a>
             <a href="#"><img src="./Icons/audio call icon.svg" class="creators-icons mt-3" alt="audio call"></a>
             <a href="#"><img src="./Icons/video call icon.svg" class="creators-icons mt-3" alt="video call"></a>
@@ -155,7 +155,7 @@
         </div>
         <div class="col-xl-2 mt-2">
           <div class="creator-profile text-center">
-            <a href="#"><img src="./Images/Camclients creators.webp" class="active-circle profile-image" alt="Camclients creator"></a>
+            <a href="#"><img src="./Images/CamClients Creators.webp" class="active-circle profile-image" alt="Camclients creator"></a>
             <a href="#"><img src="./Icons/text massege icon.svg" class="creators-icons mt-3" alt="Send Massege"></a>
             <a href="#"><img src="./Icons/audio call icon.svg" class="creators-icons mt-3" alt="audio call"></a>
             <a href="#"><img src="./Icons/video call icon.svg" class="creators-icons mt-3" alt="video call"></a>
@@ -173,7 +173,7 @@
         </div>
         <div class="col-xl-2 mt-2">
           <div class="creator-profile text-center">
-            <a href="#"><img src="./Images/Camclients creators.webp" class="live-circle profile-image" alt="Camclients creator"></a>
+            <a href="#"><img src="./Images/CamClients Creators.webp" class="live-circle profile-image" alt="Camclients creator"></a>
             <a href="#"><img src="./Icons/text massege icon.svg" class="creators-icons mt-3" alt="Send Massege"></a>
             <a href="#"><img src="./Icons/audio call icon.svg" class="creators-icons mt-3" alt="audio call"></a>
             <a href="#"><img src="./Icons/video call icon.svg" class="creators-icons mt-3" alt="video call"></a>
@@ -182,7 +182,7 @@
         </div>
         <div class="col-xl-2 mt-2">
           <div class="creator-profile text-center">
-            <a href="#"><img src="./Images/Camclients creators.webp" class="active-circle profile-image" alt="Camclients creator"></a>
+            <a href="#"><img src="./Images/CamClients Creators.webp" class="active-circle profile-image" alt="Camclients creator"></a>
             <a href="#"><img src="./Icons/text massege icon.svg" class="creators-icons mt-3" alt="Send Massege"></a>
             <a href="#"><img src="./Icons/audio call icon.svg" class="creators-icons mt-3" alt="audio call"></a>
             <a href="#"><img src="./Icons/video call icon.svg" class="creators-icons mt-3" alt="video call"></a>
