--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Cam Clients</title>
@@ -1310,8 +1310,100 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col">
+        <div class="feed-load-more">
+          <button type="button" href="#">Load More</button>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
+<!-- Footer -->
+
+<footer class="camclients-footer bgColor pt-5 px-2">
+  <div class="container py-3">
+    <div class="row">
+      <div class="col-xl-4">
+        <div class="footer-logo">
+          <a href="#"><img src="./Images/CamClients logo.webp" alt="CamClients Logo"></a>
+        </div>
+        <div class="footer-text py-3">
+          <p>Live Sex, Phone Sex, Video Calls, Chats
+            And More...</p>
+        </div>
+          <div class="footer-social">
+            <a href="#"><span class="facebook"><i class="fa-brands fa-facebook-f"></i></a></span>
+            <a href="#"><span class="twitter"><i class="fa-brands fa-twitter"></i></a></span>
+            <a href="#"><span class="insta"><i class="fa-brands fa-instagram"></i></a></span>
+            <a href="#"><span class="vk"><i class="fa-brands fa-vk"></i></a></span>
+            <a href="#"><span class="tiktok"><i class="fa-brands fa-tiktok "></i></a></span>
+          </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="footer-links">
+          <h4>Support</h4>
+          <ul class="m-0 p-0">
+            <li class="m-0"><a href="#">Live Chat</a></li>
+            <li class="m-0"><a href="#">F.A.Q.</a></li>
+            <li class="m-0"><a href="#">Contact Us</a></li>
+            <li class="m-0"><a href="#">Forum</a></li>
+            <li class="m-0"><a href="#">Suggestions</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="footer-links">
+          <h4>Opportunities</h4>
+          <ul class="m-0 p-0">
+            <li class="m-0"><a href="#">Become an affiliate</a></li>
+            <li class="m-0"><a href="#">Performer Sign Up</a></li>
+            <li class="m-0"><a href="#">Studio Sign Up</a></li>
+            <li class="m-0"><a href="#">Advertisements</a></li>
+            <li class="m-0"><a href="#">Hall of Fame</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="footer-links">
+          <h4> Extras</h4>
+          <ul class="m-0 p-0">
+            <li class="m-0"><a href="#">Contests</a></li>
+            <li class="m-0"><a href="#">Clubs</a></li>
+            <li class="m-0"><a href="#">Request</a></li>
+            <li class="m-0"><a href="#">Group Gifting</a></li>
+            <li class="m-0"><a href="#">Cam Sharing</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-xl-2">
+        <div class="footer-links">
+          <h4>Models</h4>
+          <ul class="m-0 p-0">
+            <li class="m-0"><a href="#">Recent Photos</a></li>
+            <li class="m-0"><a href="#">Promotions</a></li>
+            <li class="m-0"><a href="#">Blogs</a></li>
+            <li class="m-0"><a href="#">Popular Rooms</a></li>
+            <li class="m-0"><a href="#">Special Shows</a></li>
+            <li class="m-0"><a href="#">Wishlist</a></li>
+            <li class="m-0"><a href="#">Solo Sites</a></li>
+            <li class="m-0"><a href="#">Performers</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row copyright mt-4 py-3">
+      <div class="col-xl-6 text-start">
+        <p>&copy; Cam Clients</p>
+      </div>
+      <div class="col-xl-6 text-end">
+        <a href="#">Privacy policy</a>
+        <a href="#">Terms and conditions</a>
+      </div>
+    </div>
+  </div>
+</footer>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
 </body>
